--- a/src/app/pages/dettaglio-dipendenti-page/dettaglio-dipendenti-page.component.html
+++ b/src/app/pages/dettaglio-dipendenti-page/dettaglio-dipendenti-page.component.html
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="form-group col">
           <label for="city">City</label>
-          <h3>{{ soggetto.city }}</h3>
+          <h3>{{ soggetto.citta.name }}</h3>
         </div>
         <div class="form-group col">
           <label for="province">Province</label>
