--- a/src/app/pages/new-dipendenti-page/new-dipendenti-page.component.html
+++ b/src/app/pages/new-dipendenti-page/new-dipendenti-page.component.html
@@ -40,8 +40,8 @@
               formControlName="country"
               (change)="updateRegion($event)"
             >
-              <option *ngFor="let cc of allCountry" [value]="cc.iso">
-                {{ cc.description }}
+              <option *ngFor="let cc of allCountry" [value]="cc.idNazione">
+                {{ cc.name }}
               </option>
             </select>
           </div>
@@ -53,19 +53,19 @@
               class="browser-default custom-select"
               formControlName="city"
             >
-              <option *ngFor="let cc of cities" [value]="cc.description">
-                {{ cc.description }}
+              <option *ngFor="let cc of cities" [value]="cc.idCity">
+                {{ cc.name }}
               </option>
             </select>
           </div>
           <div class="form-group col">
-            <label for="province">Province</label>
+            <label for="region">Regione</label>
             <select
               class="browser-default custom-select"
-              formControlName="province"
-              (change)="updateCity($event)"
+              formControlName="region"
+              (change)="updateProvince($event)"
             >
-              <option *ngFor="let cc of regions" [value]="cc.description">{{
+              <option *ngFor="let cc of regions" [value]="cc.idRegion">{{
                 cc.description
               }}</option>
             </select>
@@ -73,14 +73,16 @@
         </div>
         <div class="row">
           <div class="form-group col">
-            <label for="phoneNumber">Phone Number</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="phoneNumber"
-              aria-describedby="phoneHelp"
-              placeholder="Phone Number"
-            />
+            <label for="province">Province</label>
+            <select
+              class="browser-default custom-select"
+              formControlName="province"
+              (change)="updateCity($event)"
+            >
+              <option *ngFor="let cc of province" [value]="cc.idProvincia">{{
+                cc.description
+              }}</option>
+            </select>
           </div>
           <div class="form-group col">
             <label for="address">Address</label>
