--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,7 +1,11 @@
-<div class="card" *ngIf="formgroup">
-    <div class="card-body">
-      <div class="container-fluid">
-        Test
-      </div>
-    </div>
-</div>  
+<p-card header="Advanced Card" subheader="Subheader" [style]="{width: '360px'}" styleClass="ui-card-shadow">
+    <p-header>
+        <img src="Card" src="/assets/image/logo.jpg">
+    </p-header>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</div>
+    <p-footer>
+        <button pButton type="button" label="Accedi" icon="pi pi-check" style="margin-right: .25em"></button>
+        <button pButton type="button" label="Nuovo" icon="pi pi-times" class="ui-button-secondary"></button>
+    </p-footer>
+</p-card>
