Good looking login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   Nascondi/Visualizza
 </button> -->
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<div class="container-fluid h-100">
   <router-outlet> </router-outlet>
 </div>
