--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -47,6 +47,7 @@
               type="button"
               label="Sign In"
               class="ui-button-rounded ui-button-secondary"
+              routerLink="/register"
             ></button>
           </div>
         </p-footer>
