small fix, now on login, the security meter is no longer showed

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -20,7 +20,13 @@
           <span class="ui-float-label">
             <!--<input id="float-input" type="text" size="30" pInputText />
           <label for="float-input">Password</label>-->
-            <input id="float-input" type="password" size="30" pPassword />
+            <input
+              id="float-input"
+              type="password"
+              size="30"
+              pPassword
+              [feedback]="false"
+            />
             <label for="float-input">Password</label>
           </span>
         </div>
