--- a/src/app/pages/register-page/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page/register-page.component.html
@@ -2,7 +2,7 @@
     <div class="row d-flex justify-content-center ">
       <p-card
         header="ITS Kennedy"
-        subheader="Login"
+        subheader="Register"
         [style]="{ width: '450px' }"
         styleClass="ui-card-shadow"
       >
