--- a/src/app/pages/register-page/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page/register-page.component.html
@@ -54,6 +54,7 @@
                 type="button"
                 label="Register"
                 class="ui-button-rounded"
+                (click)="Registra()"
               ></button>
             </div>
             <div>
