--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -14,7 +14,7 @@
           <div style="padding-top: 3%">
             <span class="ui-float-label">
               <input
-                id="float-input"
+                id="float-input-username"
                 type="text"
                 size="30"
                 pInputText
@@ -28,7 +28,7 @@
               <!--<input id="float-input" type="text" size="30" pInputText formControlName="password" />
           <label for="float-input">Password</label>-->
               <input
-                id="float-input"
+                id="float-input-password"
                 type="password"
                 size="30"
                 pPassword
