--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -25,5 +25,12 @@
         <a class="nav-link" routerLink="dipendenti">Dipendenti</a>
       </li>
     </ul>
+    <ul class="navbar-nav ml-sm-auto" *ngIf="isLoggedIn()">
+      <li class="ml-auto mr-1 nav-item active">
+        <a (click)="logOff()" style="cursor: pointer;"
+          ><h1><i class="fa fa-sign-out"></i></h1
+        ></a>
+      </li>
+    </ul>
   </div>
 </nav>
