Added validation on login and register

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -11,7 +11,7 @@
       </p-header>
       <form [formGroup]="loginForm">
         <div class="row d-flex justify-content-center">
-          <div style="padding-top: 3%">
+          <div class="pt-4">
             <span class="ui-float-label">
               <input
                 id="float-input-username"
@@ -23,7 +23,7 @@
               <label for="float-input">Username</label>
             </span>
           </div>
-          <div style="padding-top: 8%">
+          <div class="pt-4">
             <span class="ui-float-label">
               <!--<input id="float-input" type="text" size="30" pInputText formControlName="password" />
                 <label for="float-input">Password</label>-->
