--- a/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
+++ b/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
@@ -26,11 +26,11 @@
         <div class="row">
           <div class="col"></div>
           <div class="form-group col">
-            <label for="taxCode">Tax Code</label>
+            <label for="taxcode">Tax Code</label>
             <input
               type="text"
               class="form-control"
-              formControlName="taxCode"
+              formControlName="taxcode"
               placeholder="Tax Code"
             />
           </div>
@@ -76,10 +76,10 @@
             </select>
           </div>
           <div class="form-group col">
-            <label for="city">City</label>
+            <label for="citta">City</label>
             <select
               class="browser-default custom-select"
-              formControlName="city"
+              formControlName="citta"
             >
               <option *ngFor="let cc of cities" [value]="cc.idCity">
                 {{ cc.name }}
