--- a/src/app/pages/new-dipendenti-page/new-dipendenti-page.component.html
+++ b/src/app/pages/new-dipendenti-page/new-dipendenti-page.component.html
@@ -6,6 +6,7 @@
           <div class="form-group col">
             <label for="name">Nome</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="name"
@@ -16,6 +17,7 @@
           <div class="form-group col">
             <label for="surname">Cognome</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="surname"
@@ -27,6 +29,7 @@
           <div class="form-group col">
             <label for="gender">Gender</label>
             <input
+              maxlength="10"
               type="text"
               class="form-control"
               formControlName="gender"
@@ -37,6 +40,7 @@
           <div class="form-group col">
             <label for="taxCode">Tax Code</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="taxCode"
@@ -99,6 +103,7 @@
           <div class="form-group col">
             <label for="address">Address</label>
             <input
+              maxlength="20"
               type="text"
               class="form-control"
               formControlName="address"
