--- a/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
+++ b/src/app/pages/edit-dipendenti-page/edit-dipendenti-page.component.html
@@ -6,6 +6,7 @@
           <div class="form-group col">
             <label for="name">Nome</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="name"
@@ -16,6 +17,7 @@
           <div class="form-group col">
             <label for="surname">Cognome</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="surname"
@@ -24,10 +26,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col"></div>
-          <div class="form-group col">
+          <div class="form-group col-12">
             <label for="taxcode">Tax Code</label>
             <input
+              maxlength="15"
               type="text"
               class="form-control"
               formControlName="taxcode"
