berto metti a posto il mio codice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   Nascondi/Visualizza
 </button> -->
 <app-navbar></app-navbar>
+<app-navstocks></app-navstocks>
 <div class="container-fluid h-100">
   <router-outlet> </router-outlet>
 </div>
