--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="#">Demo</a>
+  <!-- <a class="navbar-brand" href="#">Demo</a> -->
   <button
     class="navbar-toggler"
     type="button"
@@ -18,11 +18,14 @@
     [ngClass]="{ show: navbarOpen }"
   >
     <ul class="navbar-nav" *ngIf="isLoggedIn()">
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link" routerLink="home">Home </a>
-      </li>
+      </li> -->
       <li class="nav-item active">
         <a class="nav-link" routerLink="dipendenti">Dipendenti</a>
+      </li>
+      <li class="nav item active">
+        <a class="nav-link" routerLink="stock">Stock</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-sm-auto" *ngIf="isLoggedIn()">
