--- a/src/app/shared/navstocks/navstocks.component.html
+++ b/src/app/shared/navstocks/navstocks.component.html
@@ -13,4 +13,9 @@
       </span>
     </div>
   </div>
+  <div>
+    <span (click)="option()" style="cursor: pointer;">
+      option
+    </span>
+  </div>
 </nav>
