--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-primary"
+  *ngIf="isLoggedIn()"
+>
   <!-- <a class="navbar-brand" href="#">Demo</a> -->
   <button
     class="navbar-toggler"
