--- a/src/app/shared/navstocks/navstocks.component.html
+++ b/src/app/shared/navstocks/navstocks.component.html
@@ -1,16 +1,29 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" *ngIf="isLoggedIn()">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-primary"
+  *ngIf="isLoggedIn()"
+>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+    (click)="toggleNavbar()"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{ show: navbarOpen }">
+  <div
+    class="collapse navbar-collapse"
+    id="navbarNav"
+    [ngClass]="{ show: navbarOpen }"
+  >
     <div *ngFor="let k of generic">
       <span class="navbar-text" style="text-decoration: solid;">
-        {{k.name}}:
+        {{ k.name }}:
       </span>
-      <span class="navbar-text">
-        {{k.price}}$
-      </span>
+      <span class="navbar-text"> {{ k.price }}$ </span>
     </div>
   </div>
   <div>
